marshal.c: prepended objects

* marshal.c (r_object0): load prepended objects.  treat the class of
  extended object in the included modules as prepended singleton
  class. [ruby-core:53202] [Bug #8041]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@39642 b2dd03c8-39d4-4d8f-98ff-823fe69b080e